Attempt to fix overflow issue

--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@ body {
 }
 
 .overlay {
+  border: 2px solid purple;
     width: 100%;
     height: 100vh;
     position: fixed;
+    top: 0;
+    left: 0;
     overflow-x: hidden;
 }
 
